Fixed spacing

--- a/src/scss/abstracts/fonts.scss
+++ b/src/scss/abstracts/fonts.scss
@@ -12,6 +12,13 @@ h1 {
   text-transform: uppercase;
 }
 
+.shifted-h1 {
+  margin-top: 2rem;
+  @media only screen and (min-width: 1200px) {
+    margin-top: 6rem;
+  }
+}
+
 h2 {
   font-size: clamp(1.4rem, 3.6vw, 5rem);
   text-transform: uppercase;
